# Compiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  hello.nv  hello.nv.s  pointer_test.nv  pointer_test.nv.s  struct_test.nv  struct_test.nv.s
.github/workflows/: ci.yml
include/nova/ast/: ast_dump.h  ast_node.h  expressions.h  statements.h  visitor.h
include/nova/backend/: codegen.h  memory_layout.h
include/nova/diagnostics/: diagnostics.h
include/nova/ir/: ir.h  ir_generator.h
include/nova/lexer/: lexer.h  token.h
include/nova/optimizer/: optimizer.h
include/nova/parser/: parser.h
include/nova/semantic/: semantic_analyzer.h  symbol_table.h  type.h
src/: CMakeLists.txt  main.cpp
src/ast/: ast_dump.cpp
src/backend/: codegen.cpp  memory_layout.cpp
src/diagnostics/: diagnostics.cpp
src/ir/: ir.cpp  ir_generator.cpp
src/lexer/: lexer.cpp  token.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp
src/semantic/: semantic_analyzer.cpp
tests/: CMakeLists.txt
tests/ir/: ir_test.cpp
tests/lexer/: lexer_test.cpp
tests/optimizer/: optimizer_test.cpp
tests/parser/: parser_test.cpp
tests/semantic/: semantic_test.cpp
